<resources>
    <string name="app_name">Calculadora</string>

    <string name="btn_ac">AC</string>
    <string name="btn_c">C</string>
    <string name="btn_percent">%</string>
    <string name="btn_division">/</string>
    <string name="btn_seven">7</string>
    <string name="btn_eight">8</string>
    <string name="btn_nine">9</string>
    <string name="btn_multiplication">*</string>
    <string name="btn_four">4</string>
    <string name="btn_five">5</string>
    <string name="btn_six">6</string>
    <string name="btn_minus">-</string>
    <string name="btn_one">1</string>
    <string name="btn_two">2</string>
    <string name="btn_three">3</string>
    <string name="btn_addition">+</string>
    <string name="btn_zero">0</string>
    <string name="btn_dot">.</string>
    <string name="btn_equals">=</string>
    <string name="btn_first_parenthesis">(</string>
    <string name="btn_second_parenthesis">)</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>